--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -56,7 +56,7 @@ body {
 .film-container {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   min-width: 100px;
 }
 
@@ -64,7 +64,7 @@ body {
   max-width: 280px;
   height: auto;
   margin: auto;
-  margin-top: 80px;
+  margin-top: 40px;
   display: flex;
   flex-direction: column;
   transition: all 3s;
