--- a/client/my-app/src/pages/Details.css
+++ b/client/my-app/src/pages/Details.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  background-color: rgb(201, 51, 51);
+
   box-sizing: border-box;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -11,14 +11,26 @@ body {
   width: 100vw;
   height: 720px;
   padding: 30px;
-  border: 0;
+  position: fixed;
+
+  background-color: black;
 }
-/* .blur-background {
+.blur-background {
+  display: flex;
+  background-size: cover;
   position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 400px;
-} */
+  background-image: url(./Greta\ Poster.jpg);
+  filter: blur(200px);
+}
 .main-container {
+  z-index: 999;
+  width: 100%;
   width: 100%;
   height: 100%;
   min-width: 840px;
