--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -248,6 +248,9 @@ h2 {
   overflow-x: scroll;
   height: 200px;
   text-align: left;
+  font-size: 20px;
+  outline: none;
+  border-style: none;
 }
 .description-block::-webkit-scrollbar {
   display: none;
@@ -289,7 +292,7 @@ h2 {
   box-sizing: border-box;
   width: 100vw;
   height: 100%;
-  min-height: 900px;
+  min-height: 720px;
   min-width: 1400px;
   padding: 30px;
   position: fixed;
