--- a/client/my-app/src/pages/Details.css
+++ b/client/my-app/src/pages/Details.css
@@ -125,6 +125,8 @@ body {
   flex-direction: column;
   height: 70%;
   overflow-y: scroll;
+  outline: none;
+  border-style: none;
 }
 .description-block::-webkit-scrollbar {
   display: none;
