--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(12, 12, 12);
 }
-
+/* ----------------------HOME PAGE----------------------- */
 .nav {
   z-index: 1;
   display: flex;
@@ -129,7 +129,8 @@ h2 {
   filter: blur(2px);
   transform: scale(1.05);
 }
-/* DETAILS PAGE */
+
+/* ----------------------DETAILS PAGE----------------------- */
 
 .blur-background {
   display: flex;
@@ -215,11 +216,34 @@ h2 {
   color: white;
   transition: 0.4s;
   cursor: pointer;
+  /* display: none; */
 }
 .edit-btn:hover {
   background-color: white;
   color: black;
 }
+
+.save-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2px;
+  border: 1px solid white;
+  overflow: hidden;
+  width: 64%;
+  border-radius: 24px;
+  color: white;
+  transition: 0.4s;
+  cursor: pointer;
+  animation: saveBtn;
+  animation-duration: 3s;
+}
+.save-btn:hover {
+  color: black;
+  background-color: #38dc64;
+  border: none;
+}
+
 .delete-btn {
   border: 1px solid white;
   text-align: center;
@@ -228,12 +252,16 @@ h2 {
   width: 26%;
   background-color: white;
   border-radius: 24px;
-  transition: 0.4s;
+  transition: 0.2s;
   cursor: pointer;
 }
 .delete-btn:hover {
   border: none;
-  background-color: rgb(255, 64, 64);
+  background-color: rgb(201, 71, 71);
+}
+
+.inactive-delete-movie {
+  pointer-events: none;
 }
 .genres {
   height: 10%;
@@ -293,10 +321,24 @@ h2 {
 .artist .artist-photo {
   width: 100%;
   height: 90%;
-  background-image: url('https://cdn5.vectorstock.com/i/thumb-large/45/59/profile-photo-placeholder-icon-design-in-gray-vector-37114559.jpg');
+  background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+}
+
+.add-artist {
+  opacity: 0.5;
+  transition: all 0.3s;
+}
+.add-artist:hover {
+  opacity: 1;
+}
+.add-artist .artist-photo {
+  background-image: url('https://cdn5.vectorstock.com/i/thumb-large/45/59/profile-photo-placeholder-icon-design-in-gray-vector-37114559.jpg');
+}
+.hidden-add-btn {
+  opacity: 0;
 }
 
 .fake-details-body {
