--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -143,7 +143,7 @@ h2 {
   width: 100%;
   height: 80%;
   filter: blur(100px);
-  opacity: 0.7;
+  opacity: 0.5;
 }
 .main-container {
   z-index: 999;
@@ -338,6 +338,7 @@ h2 {
   background-image: url('https://cdn5.vectorstock.com/i/thumb-large/45/59/profile-photo-placeholder-icon-design-in-gray-vector-37114559.jpg');
 }
 .hidden-add-btn {
+  pointer-events: none;
   opacity: 0;
 }
 
