--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -14,41 +14,32 @@ body {
 }
 /* ----------------------HOME PAGE----------------------- */
 .nav {
+  padding: 0 60px 0 60px;
+  position: fixed;
   z-index: 1;
   display: flex;
-  justify-content: space-around;
-  height: 6vh;
+  justify-content: space-between;
+  height: 7vh;
   /* min-height: 70px; */
   width: 100%;
-  background-color: rgb(53, 53, 53);
+  background: rgba(64, 64, 64, 0.5);
+  backdrop-filter: blur(20px);
   align-items: center;
+  color: white;
 }
-.search-bar {
-  margin: 0;
-  padding: 0;
-  border-radius: 20px;
-  height: 40px;
-  min-width: 400px;
-  width: 40vw;
-  display: inline-block;
-  margin-right: 20px;
-  border-style: none;
-}
-
 .nav .categories-button {
   display: flex;
+  justify-content: center;
   margin: 10px;
   height: 100%;
-  width: min-content;
-  padding: 0 20px 2px 20px;
-  background-color: aqua;
+  padding: 0 20px 0 20px;
   cursor: pointer;
   align-items: center;
 }
 
 .categories {
   z-index: 1;
-  position: absolute;
+  position: fixed;
   width: 300px;
   height: 0;
   overflow: scroll;
@@ -63,8 +54,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 40px;
-  background-color: rgb(48, 48, 48);
-  backdrop-filter: blur(20px);
+  background: rgba(64, 64, 64, 0.8);
+  backdrop-filter: blur(100px);
   border: 1px solid black;
   text-align: center;
   font-weight: 300;
@@ -75,14 +66,62 @@ body {
 }
 
 .categories div:hover {
-  background-color: rgb(255, 244, 244);
+  background-color: white;
   color: black;
 }
 .active {
   height: 620px;
 }
-.nav .categories-button:hover .categories {
-  min-height: 200px;
+.nav .categories-button {
+  transition: 0.2s;
+}
+.nav .categories-button:hover {
+  background-color: black;
+}
+.nav .all-movies-btn {
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  padding: 0 30px 0 30px;
+  cursor: pointer;
+  align-items: center;
+  transition: 0.2s;
+}
+
+.nav .all-movies-btn:hover {
+  background-color: #000;
+}
+
+.search-bar {
+  margin: 0;
+  padding: 0;
+  border-radius: 20px;
+  height: 40px;
+  min-width: 400px;
+  width: 40vw;
+  display: inline-block;
+  margin-right: 40px;
+  border-style: none;
+  text-align: center;
+  font-size: 20px;
+  background-color: #000;
+  outline: none;
+  color: white;
+}
+.nav .search-btn {
+  height: 64%;
+  width: 70px;
+  cursor: pointer;
+  border-style: none;
+  outline: none;
+  transition: 0.2s;
+  background: #38dc64;
+  border-radius: 12px;
+  font-size: 16px;
+  color: white;
+}
+.nav .search-btn:hover {
+  background-color: #000;
 }
 
 .nav .add-movie-button {
