--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -13,6 +13,7 @@ body {
   background-color: rgb(12, 12, 12);
 }
 /* ----------------------HOME PAGE----------------------- */
+
 .nav {
   padding: 0 60px 0 60px;
   position: fixed;
@@ -55,7 +56,7 @@ body {
   align-items: center;
   height: 40px;
   background: rgba(64, 64, 64, 0.8);
-  backdrop-filter: blur(100px);
+  backdrop-filter: blur(200px);
   border: 1px solid black;
   text-align: center;
   font-weight: 300;
@@ -152,13 +153,26 @@ body {
   max-width: 200px;
   height: auto;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 60px;
   display: flex;
   flex-direction: column;
   transition: all 3s;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
+}
+.no-such-movie {
+  overflow-x: visible;
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  position: absolute;
+  z-index: 999;
+  background-color: rgb(0, 0, 0);
+  opacity: 0.5;
+  top: 50%;
+  right: 0;
+  transition: all 1s;
 }
 
 .film-card img {
