--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -202,7 +202,7 @@ h2 {
   overflow-y: scroll;
   background-color: rgba(64, 64, 64, 0.7);
   backdrop-filter: blur(200px);
-
+  transition: all 0.3s;
   box-shadow: 10px 10px 1000px 20px rgb(0, 0, 0);
 }
 
@@ -221,7 +221,7 @@ h2 {
 }
 .search-artist-bar {
   min-height: 40px;
-  min-width: 80%;
+  min-width: 60%;
   max-width: 300px;
   border: none;
   outline: none;
@@ -245,9 +245,32 @@ h2 {
   transition: all 0.2s;
   font-size: 16px;
 }
+
 .search-artist-btn:hover {
   background-color: #ffffff;
   color: black;
+}
+.search-artist-button-container {
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.cancel-btn {
+  min-width: 40px;
+  height: 40px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 70px;
+  background-color: #000;
+  color: white;
+  text-align: center;
+  transition: all 0.2s;
+  font-size: 16px;
+}
+.cancel-btn:hover {
+  background-color: rgb(201, 71, 71);
 }
 
 .artist-box {
