--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -371,7 +371,7 @@ h2 {
   font-size: 20px;
   width: 150px;
   display: flex;
-  height: 40px;
+  height: 36px;
   justify-content: space-between;
 }
 .edit-btn {
@@ -503,7 +503,7 @@ h2 {
   background-color: rgba(0, 0, 0, 0);
 }
 .cast {
-  height: 30%;
+  height: 40%;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -524,12 +524,13 @@ h2 {
   text-align: center;
   color: white;
   transition: all 0.2s;
+  justify-content: center;
 }
 
 .artist .artist-photo {
   width: auto;
   height: 100%;
-  background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg');
+  /* background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -539,7 +540,7 @@ h2 {
   cursor: pointer;
 }
 .artist .artist-photo:hover {
-  transform: translateY(-20px);
+  transform: translateY(-30px);
 }
 .artist .artist-photo:hover .artist-name {
   transform: translateY(-20px);
@@ -558,6 +559,48 @@ h2 {
 .hidden-add-btn {
   pointer-events: none;
   opacity: 0;
+}
+.remove-artist-btn-container {
+  padding: 0 4px 0 4px;
+  width: 100%;
+  /* height: 30px; */
+  background: rgba(0, 0, 0, 0);
+  display: flex;
+  justify-content: center;
+}
+.remove-artist-btn {
+  padding: 0 4px 4px 4px;
+  width: 60%;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 70px;
+  background-color: #6b6c6e;
+  margin-bottom: 4px;
+  transition: all 0.2s;
+  cursor: pointer;
+  border-radius: 16px;
+  opacity: 1;
+}
+
+/*  */
+
+.hidden-remove-artist-btn {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.fake-remove-artist-btn {
+  padding: 0 4px 0 4px;
+  width: 60%;
+  height: 42px;
+  width: 50px;
+  margin-bottom: 4px;
+  transition: all 0.2s;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .fake-details-body {
