--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -193,15 +193,14 @@ h2 {
 .artist-pannel {
   position: fixed;
   min-width: 40%;
-  /* min-height: 500px; */
   max-height: 500px;
   top: 50%;
   left: 50%;
   border-radius: 8px;
   transform: translate(-50%, -50%);
   overflow-y: scroll;
-  background-color: rgba(64, 64, 64, 0.7);
-  backdrop-filter: blur(200px);
+  background-color: rgba(64, 64, 64, 0.5);
+  backdrop-filter: blur(30px);
   transition: all 0.3s;
   box-shadow: 10px 10px 1000px 20px rgb(0, 0, 0);
   opacity: 1;
@@ -282,7 +281,6 @@ h2 {
   align-items: center;
   justify-content: space-between;
   min-height: 50px;
-  background-color: rgba(64, 64, 64, 0);
   height: 100px;
   width: 100%;
 
@@ -290,13 +288,13 @@ h2 {
   transition: all 0.2s;
 }
 .artist-box:hover {
-  background-color: black;
+  background-color: rgba(128, 128, 128, 0.5);
 }
 .artist-box-image {
   max-height: 100%;
 }
-.there-is-no-such-artist {
-  /* width: 100%; */
+.no-result {
+  width: 100%;
   text-align: center;
   display: flex;
   width: 100%;
@@ -504,6 +502,7 @@ h2 {
 }
 .cast {
   height: 40%;
+  padding-top: 20px;
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -525,25 +524,22 @@ h2 {
   color: white;
   transition: all 0.2s;
   justify-content: center;
+  align-items: center;
 }
 
 .artist .artist-photo {
-  width: auto;
+  width: 100%;
   height: 100%;
   /* background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  border-radius: 2px;
+  border-radius: 4px;
   transition: all 0.2s;
-
   cursor: pointer;
 }
 .artist .artist-photo:hover {
-  transform: translateY(-30px);
-}
-.artist .artist-photo:hover .artist-name {
-  transform: translateY(-20px);
+  transform: translateY(-2px);
 }
 
 .add-artist {
@@ -582,6 +578,9 @@ h2 {
   cursor: pointer;
   border-radius: 16px;
   opacity: 1;
+}
+.remove-artist-btn:hover {
+  background-color: tomato;
 }
 
 /*  */
