--- a/client/my-app/src/index.css
+++ b/client/my-app/src/index.css
@@ -10,10 +10,18 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(12, 12, 12);
+  background-color: black;
 }
 /* ----------------------HOME PAGE----------------------- */
 
+.home-body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #000;
+}
 .nav {
   padding: 0 60px 0 60px;
   position: fixed;
@@ -313,6 +321,7 @@ h2 {
   height: 80%;
   filter: blur(100px);
   opacity: 0.5;
+  background: #000;
 }
 
 .main-container {
@@ -528,8 +537,8 @@ h2 {
 }
 
 .artist .artist-photo {
-  width: 100%;
-  height: 100%;
+  width: 150px;
+  height: 180px;
   /* background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg'); */
   background-size: cover;
   background-position: center;
@@ -611,4 +620,94 @@ h2 {
 }
 .fake-details-body::-webkit-scrollbar {
   display: none;
+}
+
+/* ----------------------ARTIST DETAILS PAGE----------------------- */
+.ad-body {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 1.5em;
+  line-height: 1.9em;
+  color: white;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.6);
+}
+.ad-blur-background {
+  z-index: -5;
+  position: fixed;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  filter: blur(200px);
+}
+.ad-profile-photo {
+  max-width: 90%;
+  display: block;
+  margin-bottom: 1em;
+}
+.ad-basic-infos {
+  margin-bottom: 20px;
+}
+.ad-biography {
+  margin-bottom: 40px;
+}
+.ad-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+@media screen and (min-width: 1024px) {
+  .ad-biography-text {
+    font-size: 1.8vw;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .ad-body {
+    padding: 3em;
+  }
+  .ad-basic-infos {
+    padding-top: 40px;
+    flex-basis: 40%;
+  }
+  .ad-name {
+    font-size: 40px;
+    margin-top: 20px;
+  }
+  .ad-place-of-birth {
+    margin-top: 20px;
+    font-size: 16px;
+  }
+
+  .ad-biography-text {
+    padding-top: 40px;
+    font-size: 1.45vw;
+    max-height: 100%;
+  }
+  .biography {
+    overflow-y: scroll;
+  }
+  .biography::-webkit-scrollbar {
+    display: none;
+  }
+  .ad-splitter {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .ad-profile-photo {
+    max-width: 60%;
+  }
+
+  .ad-container {
+    align-items: center;
+    justify-content: space-around;
+  }
+  .ad-biography {
+    flex-basis: 90%;
+    text-align: left;
+  }
 }
