--- a/client/my-app/src/pages/Home.css
+++ b/client/my-app/src/pages/Home.css
@@ -26,12 +26,15 @@ body {
   display: none;
 }
 .buttons-pannel {
+  position: fixed;
+  left: 0;
+  top: 0;
   height: 100vh;
-  width: 40vw;
+  width: 50vw;
   background-color: #000000;
   transition: all 0.3s;
   overflow: hidden;
-  position: fixed;
+  /* backdrop-filter: blur(20px); */
   box-shadow: 10px 10px 1000px 20px rgb(0, 0, 0);
 }
 
@@ -39,22 +42,53 @@ body {
   width: 0;
 }
 
-.buttons-pannel div {
-  overflow: hidden;
+.buttons-pannel .btn {
+  margin-top: 200px;
+  overflow: visible;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10px 10px;
+  margin: 10px 0;
   height: 40px;
-  border-radius: 8px;
-  background-color: rgb(88, 88, 88);
+  background-color: rgb(0, 0, 0);
   color: white;
+  cursor: pointer;
+  transition: all 0.2s;
 }
-.pannel-categories-button {
-  height: 500px;
-  display: flex;
-  flex-direction: column;
-  overflow-y: scroll;
+.buttons-pannel .btn:hover {
+  background-color: rgb(42, 42, 42);
+}
+.buttons-pannel .activated {
+  margin-bottom: 0;
+  background-color: #38dc64;
+}
+.buttons-pannel .activated:hover {
+  background-color: #38dc64;
+}
+.pannel-categories-container {
+  transition: all 0.4s;
+  width: 100%;
+  height: 100%;
+
+  overflow: scroll;
+}
+
+.pannel-categories-container::-webkit-scrollbar {
+  display: none;
+}
+
+.hidden-pannel-categories-container {
+  margin-top: 0;
+  height: 0vh;
+}
+.pannel-categories-container .pannel-category-box {
+  height: 1.3rem;
+  cursor: pointer;
+  text-align: center;
+  background-color: rgb(42, 42, 42);
+}
+.pannel-categories-container .pannel-category-box:hover {
+  background-color: #000;
 }
 
 .nav {
@@ -173,7 +207,7 @@ body {
   padding: 0;
   border-radius: 20px;
   height: 40px;
-  min-width: 200px;
+  /* min-width: 200px; */
   width: 40vw;
   display: inline-block;
   margin-right: 40px;
@@ -206,7 +240,7 @@ body {
   color: black;
 }
 .nav .search-btn:hover {
-  background-color: rgb(64, 171, 224);
+  background-color: #38dc64;
   color: white;
 }
 .buttons-pannel-icon {
@@ -232,7 +266,7 @@ body {
   margin-top: 40px;
   display: flex;
   flex-direction: column;
-  transition: all 3s;
+  /* transition: all 0.1s; */
   cursor: pointer;
   text-align: center;
   text-decoration: none;
@@ -295,8 +329,12 @@ h2 {
   }
 }
 @media screen and (max-width: 630px) {
-  .film-container .film-card {
-    width: 90%;
+  .film-container {
+    width: 100%;
+  }
+  .film-card {
+    width: 28vw;
+    font-size: 0.8rem;
   }
 }
 @media screen and (max-width: 564px) {
