--- a/client/my-app/src/pages/CreateMovie.css
+++ b/client/my-app/src/pages/CreateMovie.css
@@ -237,6 +237,7 @@
   display: flex;
   cursor: pointer;
   transition: all 0.2s;
+  text-decoration-style: none;
 }
 .cm-cancel-process-button {
   display: flex;
