--- a/client/my-app/src/pages/MovieDetails.css
+++ b/client/my-app/src/pages/MovieDetails.css
@@ -126,22 +126,22 @@
 
 .main-container {
   width: 100%;
-  width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-around;
-
   color: white;
   background: rgba(0, 0, 0, 0);
 }
 
 .poster {
-  /* min-width: auto; */
-  /* height: auto; */
   background-size: contain;
   background-repeat: no-repeat;
   margin-right: 20px;
-  max-width: 500px;
+  min-width: 440px;
+  width: 28%;
+  /* display: block; */
+  /* height: auto; */
+  transition: all 0.2s;
 }
 
 .info-container {
@@ -311,13 +311,13 @@
   background-color: rgba(0, 0, 0, 0);
 }
 .cast {
-  height: 40%;
-  padding-top: 20px;
+  height: 50%;
+  /* padding-top: 20px; */
   display: flex;
   flex-direction: row;
   width: 100%;
-  overflow-x: scroll;
   overflow-y: visible;
+  overflow-x: scroll;
 }
 .cast::-webkit-scrollbar {
   display: none;
@@ -325,22 +325,20 @@
 .artist {
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
-  min-width: 140px;
+  justify-content: flex-end;
+  padding-top: 24px;
+  min-width: 150px;
   background-size: contain;
   margin-right: 30px;
   height: 100%;
   text-align: center;
-  color: white;
   transition: all 0.2s;
-  justify-content: center;
-  align-items: center;
+  overflow: hidden;
 }
 
 .artist .artist-photo {
   width: 150px;
   height: 180px;
-  /* background-image: url('https://cdn.wallpapersafari.com/76/7/wklvAb.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -349,14 +347,14 @@
   cursor: pointer;
 }
 .artist .artist-photo:hover {
-  transform: translateY(-2px);
+  transform: translateY(-4px);
 }
 
 .add-artist {
   opacity: 0.5;
   transition: all 0.3s;
   width: 150px;
-  height: 260px;
+  height: 270px;
 }
 .add-artist:hover {
   opacity: 1;
@@ -403,7 +401,7 @@
 .fake-remove-artist-btn {
   padding: 0 4px 0 4px;
   width: 60%;
-  height: 32px;
+  height: 42px;
   width: 50px;
   margin-bottom: 4px;
   transition: all 0.2s;
@@ -421,4 +419,38 @@
 }
 .fake-details-body::-webkit-scrollbar {
   display: none;
+}
+
+@media screen and (max-width: 1120px) {
+  .main-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .info-container {
+    /* padding: 0; */
+    width: 100%;
+  }
+  .poster {
+    width: 100%;
+    max-width: 420px;
+    margin: 0 10px;
+  }
+  .artist {
+    margin-right: 10px;
+  }
+  .artist .artist-photo {
+    width: 120px;
+    height: 144px;
+    margin-right: 24px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .poster {
+    min-width: 80%;
+  }
+  .info-container {
+    width: 100%;
+  }
 }
