--- a/client/my-app/src/pages/MovieDetails.css
+++ b/client/my-app/src/pages/MovieDetails.css
@@ -328,7 +328,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding-top: 24px;
+  /* padding-top: 24px; */
   min-width: 150px;
   background-size: contain;
   margin-right: 30px;
@@ -353,10 +353,13 @@
 }
 
 .add-artist {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
   opacity: 0.5;
   transition: all 0.3s;
   width: 150px;
-  height: 270px;
+  height: 210px;
 }
 .add-artist:hover {
   opacity: 1;
