--- a/client/my-app/src/pages/CreateMovie.css
+++ b/client/my-app/src/pages/CreateMovie.css
@@ -18,7 +18,7 @@
 }
 .error-pannel {
   z-index: 999;
-  padding: 2rem;
+  padding: 2rem 4rem 0.6rem 4rem;
   max-width: 70vw;
   min-width: 240px;
   min-height: 30vh;
@@ -29,12 +29,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 1.4rem;
-  border-radius: 4 px;
+  font-size: 1rem;
+  border-radius: 4px;
 }
 .warning-row {
   margin-bottom: 20px;
-  color: #ff6347;
+  color: #ffa647;
 }
 .close-error-pannel-btn {
   height: 40px;
@@ -44,12 +44,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(112, 112, 112);
+  background-color: rgb(80, 80, 80);
   margin: auto;
   cursor: pointer;
 }
 .close-error-pannel-btn:hover {
-  background-color: rgb(64, 158, 217);
+  background-color: rgb(0, 0, 0);
 }
 .hidden-error-pannel {
   display: none;
