--- a/client/my-app/src/pages/Home.css
+++ b/client/my-app/src/pages/Home.css
@@ -345,6 +345,10 @@ h2 {
     display: inline-block;
     cursor: pointer;
   }
+  .film-card:hover img {
+    transform: scale(1.05);
+    border-radius: 16px;
+  }
 
   .search-bar {
     width: 60%;
